--- a/frontend/src/pages/fs/ImportExportPage.module.less
+++ b/frontend/src/pages/fs/ImportExportPage.module.less
@@ -31,9 +31,6 @@
   grid-area: content;
 }
 
-.alertInno {
-}
-
 .aside {
   grid-area: aside;
   justify-self: baseline;
